--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/auth": "^11.2.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
-    "expo": "~40.0.0",
+    "@react-navigation/stack": "^5.14.4",
+    "expo": "^40.0.1",
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-actionsheet": "^2.4.2",
-    "react-native-gesture-handler": "^1.8.0",
+    "react-native-elements": "^3.3.2",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-image-crop-picker": "^0.36.0",
-    "react-native-reanimated": "^1.13.3",
+    "react-native-reanimated": "~1.13.0",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
