--- a/app.json
+++ b/app.json
@@ -1,12 +1,17 @@
 {
   "expo": {
-    "name": "LittleFriendApp",
-    "slug": "LittleFriendApp",
+    "name": "QUiz",
+    "slug": "Quiz",
+    "privacy": "public",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./LittleFriendApp/assets/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./LittleFriendApp/assets/splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,15 +23,6 @@
     ],
     "ios": {
       "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./LittleFriendApp/assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./LittleFriendApp/assets/favicon.png"
     }
   }
 }
