--- a/package.json
+++ b/package.json
@@ -4,39 +4,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-firebase/app": "^11.2.0",
-    "@react-native-firebase/auth": "^11.2.0",
-    "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.4",
-    "expo": "^40.0.1",
-    "expo-image-picker": "~9.2.0",
-    "expo-status-bar": "~1.0.3",
-    "firebase": "7.9.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-actionsheet": "^2.4.2",
-    "react-native-elements": "^3.3.2",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-image-crop-picker": "^0.36.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-redash": "^16.0.8",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-unordered-list": "^1.0.4",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "expo": "^38.0.0",
+    "react": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "babel-preset-expo": "^8.2.3",
+    "eslint": "^7.4.0",
+    "eslint-config-handlebarlabs": "^0.0.6"
   },
   "private": true
 }
