--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/app": "^11.3.3",
     "@react-native-firebase/auth": "^11.2.0",
+    "@react-native-firebase/database": "^11.3.3",
+    "@react-native-firebase/firestore": "^11.3.3",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.4",
@@ -26,8 +28,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-actionsheet": "^2.4.2",
-    "react-native-elements": "^3.3.2",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-radio-buttons-group": "^2.2.1",
