--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@mdi/font": "^5.9.55",
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.5.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^11.3.3",
     "@react-native-firebase/auth": "^11.2.0",
@@ -33,6 +36,7 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-image-crop-picker": "^0.36.0",
+    "react-native-paper": "^4.8.1",
     "react-native-radio-buttons-group": "^2.2.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-redash": "^16.0.8",
@@ -40,6 +44,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-simple-survey": "^3.1.2",
     "react-native-unordered-list": "^1.0.4",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
